--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       gap: 1rem;
       padding: 0 1rem;
       text-align: center;
-      color: rgb(0, 0, 0);
+      color: rgb(255, 255, 255);
       font-weight: bold;
       max-width: 700px;
     }
@@ -138,6 +138,7 @@
 
     .counter:hover {
       background: white;
+      color: black;
     }
 
     main {
@@ -728,3 +729,4 @@ Facilitar o gerenciamento de filas. Mas nosso propósito nos levou além. Estamo
   </script>
 </body>
 </html>
+
